--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
                 <div class="contact">
                     <div class="phone">
                         <a href="tel:+38 067 710 21 06 ">
-                            +38 067 710 21 06 </a>
+                            +38 067 710 21 06
+                        </a>
                     </div>
                     <div class="socials">
                         <div class="item mail ">
@@ -940,21 +941,20 @@
                         <div class="row">
                             <div class="item">
                                 <label>Ім’я</label>
-                                <input type="text" class="input" name="your-name" required="true" placeholder="Роман">
+                                <input type="text" class="input" required="true" placeholder="Роман">
                             </div>
                             <div class="item">
                                 <label>Електроннна пошта</label>
-                                <input type="email" class="input" name="your-email" required="true"
+                                <input type="email" class="input" required="true"
                                     placeholder="roman.grytsenko@gmail.com">
                             </div>
                             <div class="item">
                                 <label>Тема</label>
-                                <input type="text" class="input" name="your-subject" required="true"
-                                    placeholder="Зустріч">
+                                <input type="text" class="input" required="true" placeholder="Зустріч">
                             </div>
                             <div class="col-lg-12 item">
                                 <label>Текст повідомлення</label>
-                                <textarea name="your-message" class="input" cols="1" rows="1"
+                                <textarea class="input" cols="1" rows="1"
                                     placeholder="Підкажіть, будь ласка, чи можемо ми домовитися про зустріч..."></textarea>
                             </div>
                             <div class="submit_button">
