--- a/index.html
+++ b/index.html
@@ -272,73 +272,75 @@
                         <ul class="list-unstyled">
                             <li class="item">
                                 <div class="icon">
-                                    <img src="./images/frame1_1.svg" alt="Клімат-контроль приміщень">
+                                    <svg width="13" height="13" viewBox="0 0 13 13" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M2.97925 7.58212C2.97925 8.15083 3.10789 8.68568 3.36519 9.18668C3.62248 9.68768 3.98133 10.1052 4.44175 10.4392C4.40564 10.3309 4.37855 10.2203 4.3605 10.1074C4.34244 9.9946 4.33341 9.88402 4.33341 9.7757C4.33341 9.48683 4.38758 9.21602 4.49591 8.96326C4.60425 8.7105 4.76223 8.48031 4.96987 8.27269L6.50008 6.76969L8.03029 8.27269C8.23793 8.48031 8.39591 8.7105 8.50425 8.96326C8.61258 9.21602 8.66675 9.48683 8.66675 9.7757C8.66675 9.88402 8.65772 9.9946 8.63966 10.1074C8.62161 10.2203 8.59453 10.3309 8.55842 10.4392C9.01883 10.1052 9.37769 9.68768 9.63498 9.18668C9.89227 8.68568 10.0209 8.15083 10.0209 7.58212C10.0209 7.09466 9.9171 6.61849 9.70946 6.15359C9.50182 5.6887 9.2039 5.26217 8.81571 4.87401C8.62612 5.00941 8.42751 5.11548 8.21987 5.19221C8.01223 5.26894 7.8046 5.30731 7.59696 5.30731C7.04626 5.30731 6.59036 5.11999 6.22925 4.74537C5.86814 4.37075 5.68758 3.89909 5.68758 3.33038V3.05957C5.2723 3.35746 4.89765 3.68695 4.56362 4.04803C4.2296 4.40911 3.94522 4.78599 3.7105 5.17867C3.47578 5.57135 3.29522 5.97305 3.16883 6.38378C3.04244 6.79451 2.97925 7.19396 2.97925 7.58212ZM6.50008 7.9071L5.53862 8.85494C5.41223 8.98132 5.31519 9.12124 5.24748 9.2747C5.17977 9.42816 5.14591 9.59516 5.14591 9.7757C5.14591 10.1458 5.27682 10.4595 5.53862 10.7168C5.80043 10.974 6.12091 11.1027 6.50008 11.1027C6.87925 11.1027 7.19973 10.974 7.46154 10.7168C7.72335 10.4595 7.85425 10.1458 7.85425 9.7757C7.85425 9.59516 7.82039 9.42816 7.75269 9.2747C7.68498 9.12124 7.58793 8.98132 7.46154 8.85494L6.50008 7.9071ZM6.50008 1.62427V3.41162C6.50008 3.71854 6.60616 3.97582 6.81831 4.18344C7.03046 4.39106 7.29001 4.49487 7.59696 4.49487C7.75946 4.49487 7.91067 4.46102 8.0506 4.39332C8.19053 4.32561 8.31467 4.22406 8.423 4.08865L8.66675 3.79076C9.3348 4.1699 9.86293 4.69798 10.2511 5.37501C10.6393 6.05204 10.8334 6.78774 10.8334 7.58212C10.8334 8.79175 10.4136 9.81632 9.57404 10.6558C8.73446 11.4954 7.7098 11.9151 6.50008 11.9151C5.29036 11.9151 4.26571 11.4954 3.42612 10.6558C2.58654 9.81632 2.16675 8.79175 2.16675 7.58212C2.16675 6.42666 2.55494 5.31408 3.33133 4.24437C4.10772 3.17466 5.16397 2.3013 6.50008 1.62427Z"
+                                            fill="#181818" />
+                                    </svg>
                                 </div>
-
                                 <div class="text">
-                                    Опалення </div>
+                                    Опалення
+                                </div>
                             </li>
                             <li class="item">
                                 <div class="icon">
-                                    <img src="./images/frame2_2.svg" alt="Клімат-контроль приміщень">
+                                    <svg width="17" height="18" viewBox="0 0 17 18" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M4.10833 11.672L2.99271 10.5565C3.8191 9.73019 4.68385 9.11044 5.58698 8.69728C6.4901 8.28412 7.46111 8.07754 8.5 8.07754C9.53889 8.07754 10.5099 8.28412 11.413 8.69728C12.3161 9.11044 13.1809 9.73019 14.0073 10.5565L12.8917 11.672C12.1715 10.952 11.4455 10.4385 10.7135 10.1315C9.9816 9.82462 9.24375 9.67116 8.5 9.67116C7.75625 9.67116 7.0184 9.82462 6.28646 10.1315C5.55451 10.4385 4.82847 10.952 4.10833 11.672ZM1.11563 8.67958L0 7.56404C1.09792 6.4426 2.37587 5.53955 3.83385 4.85488C5.29184 4.17021 6.84722 3.82788 8.5 3.82788C10.1528 3.82788 11.7082 4.17021 13.1661 4.85488C14.6241 5.53955 15.9021 6.4426 17 7.56404L15.8844 8.67958C14.8455 7.68799 13.7092 6.89708 12.4755 6.30685C11.2418 5.71662 9.91667 5.4215 8.5 5.4215C7.08333 5.4215 5.75816 5.71662 4.52448 6.30685C3.2908 6.89708 2.15451 7.68799 1.11563 8.67958ZM8.5 16.0634L11.1208 13.425C10.7785 13.0827 10.3859 12.8141 9.94323 12.6194C9.50052 12.4246 9.01944 12.3272 8.5 12.3272C7.98056 12.3272 7.49948 12.4246 7.05677 12.6194C6.61406 12.8141 6.22153 13.0827 5.87917 13.425L8.5 16.0634Z"
+                                            fill="#181818" />
+                                    </svg>
                                 </div>
-
                                 <div class="text">
-                                    Wi-fi та Інтернет </div>
+                                    Wi-fi та Інтернет
+                                </div>
                             </li>
                             <li class="item">
                                 <div class="icon">
-                                    <img src="./images/frame3.svg" alt="Клімат-контроль приміщень">
+                                    <svg width="28" height="29" viewBox="0 0 28 29" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M13.1251 24.8758C10.7723 24.6619 8.77439 23.6897 7.13133 21.9591C5.48828 20.2286 4.66675 18.148 4.66675 15.7174C4.66675 14.4341 4.9098 13.2431 5.39591 12.1445C5.88203 11.0459 6.55286 10.0688 7.40841 9.21328L14.0001 2.73828L20.5917 9.21328C21.3306 9.95217 21.9334 10.7786 22.4001 11.6924C22.8667 12.6063 23.1584 13.598 23.2751 14.6674H21.5251C21.4279 13.8508 21.1994 13.1022 20.8397 12.4216C20.4799 11.7411 20.0084 11.1091 19.4251 10.5258L14.0001 5.18828L8.57508 10.5258C7.87508 11.2258 7.34036 12.0036 6.97091 12.8591C6.60147 13.7147 6.41675 14.6674 6.41675 15.7174C6.41675 17.6619 7.06328 19.3244 8.35633 20.7049C9.64939 22.0855 11.239 22.8827 13.1251 23.0966V24.8758ZM15.5751 18.7799L14.9917 17.4383C15.4779 17.1855 15.9786 16.9813 16.4938 16.8258C17.0091 16.6702 17.539 16.5924 18.0834 16.5924C18.5306 16.5924 18.9633 16.6459 19.3813 16.7529C19.7994 16.8598 20.2126 16.9911 20.6209 17.1466C20.9709 17.3022 21.3355 17.4383 21.7147 17.5549C22.0938 17.6716 22.4779 17.7299 22.8667 17.7299C23.314 17.7299 23.7466 17.6619 24.1647 17.5258C24.5827 17.3897 24.9862 17.2147 25.3751 17.0008L25.9584 18.3424C25.4723 18.5952 24.9716 18.7994 24.4563 18.9549C23.9411 19.1105 23.4112 19.1883 22.8667 19.1883C22.4195 19.1883 21.9869 19.1348 21.5688 19.0279C21.1508 18.9209 20.7376 18.7897 20.3292 18.6341C19.9792 18.4786 19.6147 18.3424 19.2355 18.2258C18.8563 18.1091 18.4723 18.0508 18.0834 18.0508C17.6362 18.0508 17.2036 18.1188 16.7855 18.2549C16.3674 18.3911 15.964 18.5661 15.5751 18.7799ZM15.5751 22.5716L14.9917 21.2299C15.4779 20.9772 15.9786 20.773 16.4938 20.6174C17.0091 20.4619 17.539 20.3841 18.0834 20.3841C18.5306 20.3841 18.9633 20.4376 19.3813 20.5445C19.7994 20.6515 20.2126 20.7827 20.6209 20.9383C20.9709 21.0938 21.3355 21.2299 21.7147 21.3466C22.0938 21.4633 22.4779 21.5216 22.8667 21.5216C23.314 21.5216 23.7466 21.4536 24.1647 21.3174C24.5827 21.1813 24.9862 21.0063 25.3751 20.7924L25.9584 22.1341C25.4723 22.3869 24.9716 22.5911 24.4563 22.7466C23.9411 22.9022 23.4112 22.9799 22.8667 22.9799C22.4195 22.9799 21.9869 22.9265 21.5688 22.8195C21.1508 22.7126 20.7376 22.5813 20.3292 22.4258C19.9792 22.2702 19.6147 22.1341 19.2355 22.0174C18.8563 21.9008 18.4723 21.8424 18.0834 21.8424C17.6362 21.8424 17.2036 21.9105 16.7855 22.0466C16.3674 22.1827 15.964 22.3577 15.5751 22.5716ZM15.5751 26.3633L14.9917 25.0216C15.4779 24.7688 15.9786 24.5647 16.4938 24.4091C17.0091 24.2536 17.539 24.1758 18.0834 24.1758C18.5306 24.1758 18.9633 24.2293 19.3813 24.3362C19.7994 24.4431 20.2126 24.5744 20.6209 24.7299C20.9709 24.8855 21.3355 25.0216 21.7147 25.1383C22.0938 25.2549 22.4779 25.3133 22.8667 25.3133C23.314 25.3133 23.7466 25.2452 24.1647 25.1091C24.5827 24.973 24.9862 24.798 25.3751 24.5841L25.9584 25.9258C25.4723 26.1786 24.9716 26.3827 24.4563 26.5383C23.9411 26.6938 23.4112 26.7716 22.8667 26.7716C22.4195 26.7716 21.9869 26.7181 21.5688 26.6112C21.1508 26.5043 20.7376 26.373 20.3292 26.2174C19.9792 26.0619 19.6147 25.9258 19.2355 25.8091C18.8563 25.6924 18.4723 25.6341 18.0834 25.6341C17.6362 25.6341 17.2036 25.7022 16.7855 25.8383C16.3674 25.9744 15.964 26.1494 15.5751 26.3633Z"
+                                            fill="white" />
+                                    </svg>
                                 </div>
-
                                 <div class="text">
-                                    Клімат-контроль приміщень </div>
-                            </li>
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame4_4.svg" alt="Клімат-контроль приміщень">
-                                </div>
-
-                                <div class="text">
-                                    Управління світлом </div>
-                            </li>
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame5_5.svg" alt="Клімат-контроль приміщень">
-                                </div>
-
-                                <div class="text">
-                                    Безпека </div>
-                            </li>
-                        </ul>
-                        <ul class="list-unstyled">
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame1.svg" alt="Клімат-контроль приміщень">
-                                </div>
-                            </li>
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame2.svg" alt="Клімат-контроль приміщень">
-                                </div>
-                            </li>
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame3.svg" alt="Клімат-контроль приміщень">
-
-                                </div>
-                                <!-- <div class="text">
                                     Клімат-контроль приміщень
-                                </div> -->
-                            </li>
-                            <li class="item">
-                                <div class="icon">
-                                    <img src="./images/frame4.svg" alt="Клімат-контроль приміщень">
                                 </div>
                             </li>
                             <li class="item">
                                 <div class="icon">
-                                    <img src="./images/frame5.svg" alt="Клімат-контроль приміщень">
+                                    <svg width="19" height="20" viewBox="0 0 19 20" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0_1717_1133)">
+                                            <path
+                                                d="M17.5552 8.75632L17.1 7.76682L16.1104 7.31165L17.1 6.85647L17.5552 5.86697L18.0104 6.85647L19 7.31165L18.0104 7.76682L17.5552 8.75632ZM15.0417 5.29306L14.349 3.82859L12.8844 3.13594L14.349 2.44329L15.0417 0.978821L15.7344 2.44329L17.199 3.13594L15.7344 3.82859L15.0417 5.29306ZM7.125 18.3941C6.67639 18.3941 6.29705 18.2391 5.98698 17.929C5.67691 17.619 5.52188 17.2397 5.52188 16.7911H8.72812C8.72812 17.2397 8.57309 17.619 8.26302 17.929C7.95295 18.2391 7.57361 18.3941 7.125 18.3941ZM3.91875 15.5641V14.3767H10.3313V15.5641H3.91875ZM4.01771 13.1695C3.14687 12.6022 2.45747 11.893 1.94948 11.0421C1.44149 10.1911 1.1875 9.23128 1.1875 8.16262C1.1875 6.55303 1.77465 5.16112 2.94896 3.98691C4.12326 2.8127 5.51528 2.2256 7.125 2.2256C8.73472 2.2256 10.1267 2.8127 11.301 3.98691C12.4753 5.16112 13.0625 6.55303 13.0625 8.16262C13.0625 9.23128 12.8118 10.1911 12.3104 11.0421C11.809 11.893 11.1163 12.6022 10.2323 13.1695H4.01771ZM4.45313 11.9821H9.81667C10.45 11.5599 10.9514 11.0124 11.3208 10.3395C11.6903 9.66666 11.875 8.94103 11.875 8.16262C11.875 6.85647 11.4099 5.73833 10.4797 4.8082C9.54948 3.87807 8.43125 3.413 7.125 3.413C5.81875 3.413 4.70052 3.87807 3.77031 4.8082C2.8401 5.73833 2.375 6.85647 2.375 8.16262C2.375 8.94103 2.55972 9.66666 2.92917 10.3395C3.29861 11.0124 3.8066 11.5599 4.45313 11.9821V11.9821Z"
+                                                fill="#181818" />
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0_1717_1133">
+                                                <rect width="19" height="18.9985" fill="white"
+                                                    transform="translate(0 0.978821)" />
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </div>
+                                <div class="text">
+                                    Управління світлом
+                                </div>
+                            </li>
+                            <li class="item">
+                                <div class="icon">
+                                    <svg width="13" height="13" viewBox="0 0 13 13" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path
+                                            d="M5.90425 8.63578L8.99175 5.786L8.423 5.27354L5.94487 7.56086L4.57716 6.29846L3.98133 6.84842L5.90425 8.63578ZM6.50008 11.9605C5.23619 11.6689 4.198 10.9918 3.3855 9.92943C2.573 8.86701 2.16675 7.70252 2.16675 6.43595V3.46119L6.50008 1.9613L10.8334 3.46119V6.43595C10.8334 7.70252 10.4272 8.86701 9.61466 9.92943C8.80216 10.9918 7.76397 11.6689 6.50008 11.9605ZM6.50008 11.1856C7.53828 10.8689 8.38463 10.2711 9.03914 9.39197C9.69366 8.51287 10.0209 7.52753 10.0209 6.43595V3.98614L6.50008 2.76124L2.97925 3.98614V6.43595C2.97925 7.52753 3.30651 8.51287 3.96102 9.39197C4.61553 10.2711 5.46189 10.8689 6.50008 11.1856Z"
+                                            fill="#181818" />
+                                    </svg>
+                                </div>
+                                <div class="text">
+                                    Безпека
                                 </div>
                             </li>
                         </ul>
@@ -1041,7 +1043,7 @@
                                         d="M10.5001 13.1772C11.1244 13.1772 11.6572 12.9566 12.0985 12.5153C12.5398 12.0739 12.7605 11.5411 12.7605 10.9168C12.7605 10.2925 12.5398 9.75971 12.0985 9.31839C11.6572 8.87707 11.1244 8.65641 10.5001 8.65641C9.87578 8.65641 9.34296 8.87707 8.90164 9.31839C8.46032 9.75971 8.23967 10.2925 8.23967 10.9168C8.23967 11.5411 8.46032 12.0739 8.90164 12.5153C9.34296 12.9566 9.87578 13.1772 10.5001 13.1772ZM10.5001 23.8658C13.3633 21.2609 15.4784 18.8983 16.8454 16.7778C18.2124 14.6573 18.8959 12.7897 18.8959 11.1752C18.8959 8.63488 18.0832 6.55745 16.4579 4.94287C14.8325 3.32829 12.8466 2.521 10.5001 2.521C8.15355 2.521 6.16762 3.32829 4.54227 4.94287C2.91692 6.55745 2.10425 8.63488 2.10425 11.1752C2.10425 12.7897 2.8039 14.6573 4.20321 16.7778C5.60251 18.8983 7.70147 21.2609 10.5001 23.8658ZM10.5001 26.4168C7.03411 23.4675 4.44539 20.7281 2.73394 18.1986C1.02248 15.6691 0.166748 13.3279 0.166748 11.1752C0.166748 7.946 1.20546 5.37343 3.28289 3.45745C5.36032 1.54148 7.76605 0.583496 10.5001 0.583496C13.2341 0.583496 15.6398 1.54148 17.7173 3.45745C19.7947 5.37343 20.8334 7.946 20.8334 11.1752C20.8334 13.3279 19.9777 15.6691 18.2662 18.1986C16.5548 20.7281 13.9661 23.4675 10.5001 26.4168Z"
                                         fill="#2A43CC"></path>
                                 </svg>
-                                &nbsp;м. Львів, вул. Богданівська, 11 </a>
+                                м. Львів, вул. Богданівська, 11 </a>
                         </li>
                         <li>
                             <a href="mailto:iqdim.ua@gmail.com">
@@ -1051,7 +1053,7 @@
                                         d="M2.08325 19.3332C1.61659 19.3332 1.20825 19.1582 0.858252 18.8082C0.508252 18.4582 0.333252 18.0498 0.333252 17.5832V2.4165C0.333252 1.94984 0.508252 1.5415 0.858252 1.1915C1.20825 0.841504 1.61659 0.666504 2.08325 0.666504H21.9166C22.3833 0.666504 22.7916 0.841504 23.1416 1.1915C23.4916 1.5415 23.6666 1.94984 23.6666 2.4165V17.5832C23.6666 18.0498 23.4916 18.4582 23.1416 18.8082C22.7916 19.1582 22.3833 19.3332 21.9166 19.3332H2.08325ZM11.9999 10.5248L2.08325 4.02067V17.5832H21.9166V4.02067L11.9999 10.5248ZM11.9999 8.77484L21.7999 2.4165H2.22909L11.9999 8.77484ZM2.08325 4.02067V2.4165V17.5832V4.02067Z"
                                         fill="#2A43CC"></path>
                                 </svg>
-                                &nbsp;iqdim.ua@gmail.com </a>
+                                iqdim.ua@gmail.com </a>
                         </li>
                         <li>
                             <a href="tel:+38 067 710 21 06 ">
@@ -1061,7 +1063,7 @@
                                         d="M21.0156 22.375C18.5587 22.375 16.1168 21.7708 13.6901 20.5625C11.2634 19.3542 9.08333 17.7833 7.15 15.85C5.21667 13.9167 3.64583 11.7366 2.4375 9.3099C1.22917 6.88316 0.625 4.44132 0.625 1.98438C0.625 1.60174 0.755903 1.27951 1.01771 1.01771C1.27951 0.755903 1.60174 0.625 1.98438 0.625H6.21354C6.49549 0.625 6.74219 0.72066 6.95365 0.911979C7.1651 1.1033 7.30104 1.36007 7.36146 1.68229L8.17708 5.48854C8.21736 5.77049 8.21233 6.02726 8.16198 6.25885C8.11163 6.49045 8.0059 6.68681 7.84479 6.84792L4.82396 9.89896C5.95174 11.7719 7.21545 13.4031 8.6151 14.7927C10.0148 16.1823 11.6007 17.3604 13.3729 18.3271L16.2427 15.3667C16.4441 15.1451 16.6757 14.9891 16.9375 14.8984C17.1993 14.8078 17.4611 14.7927 17.7229 14.8531L21.3177 15.6385C21.6198 15.699 21.8715 15.85 22.0729 16.0917C22.2743 16.3333 22.375 16.6153 22.375 16.9375V21.0156C22.375 21.3983 22.2441 21.7205 21.9823 21.9823C21.7205 22.2441 21.3983 22.375 21.0156 22.375ZM3.91771 8.2375L6.36458 5.76042L5.66979 2.4375H2.4375C2.4375 3.22292 2.55833 4.08385 2.8 5.02031C3.04167 5.95677 3.41424 7.02917 3.91771 8.2375ZM15.0646 19.2031C15.8903 19.5858 16.7865 19.8979 17.7531 20.1396C18.7198 20.3813 19.6562 20.5222 20.5625 20.5625V17.3302L17.451 16.6958L15.0646 19.2031Z"
                                         fill="#2A43CC"></path>
                                 </svg>
-                                &nbsp;+38 067 710 21 06 </a>
+                                +38 067 710 21 06 </a>
                         </li>
                     </ul>
                 </div>
